# mcp-client-server-jwt-issuance-and-validation

./: .gitignore  .markdownlint-cli2.yaml  .markdownlint.yaml  AGENTS.md  ARCHITECTURE.md  QUICKSTART.md  README.md  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: mcp-client-support-matrix.html
identity-provider/: main.py  pyproject.toml
identity-provider/tests/: test_identity_provider.py
mcp-client/: main.py  pyproject.toml
mcp-client/tests/: test_client.py  test_e2e.py
mcp-server/: main.py  pyproject.toml
mcp-server/tests/: test_validation.py
