[project]
name = "identity-provider"
version = "0.1.0"
description = "OAuth2/OIDC Identity Provider emulating Entra ID"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.10.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-cov>=6.0.0",
]
