[project]
name = "mcp-client"
version = "0.1.0"
description = "MCP Client with OAuth2 Authorization Code Flow and PKCE"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.3.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
